--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "authlogin",
   "version": "1.0.0",
   "description": "Auth Login System",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "run  dev"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
     "raza"
   ],
   "author": "M Raza",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
